Twenty Twelve: fix style for links in gallery captions wrapping to next line, props DrewAPicture. Fixes #22227.
git-svn-id: http://core.svn.wordpress.org/trunk@22294 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -358,9 +358,15 @@ img.wp-smiley,
 .entry-content dl.gallery-item {
 	margin: 0;
 }
+.gallery-item a,
+.gallery-caption {
+	width: 90%;
+}
 .gallery-item a {
 	display: block;
-	width: 90%;
+}
+.gallery-caption a {
+	display: inline;
 }
 .gallery-columns-1 .gallery-item a {
 	max-width: 100%;
